fix: 深度代码审查修复 - OAuth State安全、批量插入性能、数据权限查询优化等
修复 13 项代码审查发现的问题：
- 安全：OAuth State 内存存储改为 Redis，支持多实例部署
- 性能：关联表循环单条插入改为 SqlSession BATCH 批量插入
- 架构：UserService 移除 JdbcTemplate，通过 EmployeeDAO 查询员工存在性
- 性能：DataScopeHelper 重复查询角色优化（applyDataScope 只查 1 次）
- 性能：DataScopeHelper 递归查部门树改为全量内存构建
- 性能：OrgUnitService 树构建 O(n²) → O(n)
- 代码质量：MapStruct 冗余同名字段 @Mapping 注解清理
- 代码质量：UserService/RoleService findById 直接构建 VO，消除 MapStruct 浪费
- 可维护性：提取 ClientIpUtil，修复登录 IP 硬编码为 127.0.0.1
- 可维护性：AuthService 统一为单一构造函数，@Nullable 标记可选 RedisTemplate
- 一致性：RoleService.create() 使用 MapStruct toEntity() 转换
- 数据库：补充 sys_role_menu.role_id 索引（V9 迁移脚本）
- 前端：修复 api/client.ts 响应拦截器返回类型错误

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>